<resources>
    <string name="app_name">Drugs\' guide</string>
    <string name="title_activity_panier">Cart</string>
    <string name="title_activity_main">Drugs\' guide</string>
    <string name="title_activity_drugs">Drugs</string>
    <string name="title_activity_drug">Drug</string>
    <string name="title_drug_cart_summary">Cart</string>
    <string name="counter_indication">Contraindication</string>
    <!-- also referred as tty by RxNav -->
    <string-array name="term_types">
        <item>BN|Brand Name</item>
        <item>SBDC|Branded Drug Component</item>
        <item>SBD|Branded Drug Name</item>
        <item>SBDF|Branded Drug Form</item>

        <item>IN|Ingredient</item>
        <item>PIN|Precise Ingredient</item>
        <item>DF|Dose Form</item>

        <item>SCDC|Clinical Drug Component</item>
        <item>SCD|Clinical Drug Name</item>
        <item>SDCF|Clinical Drug Form</item>
    </string-array>
    <string name="maternity_index">Maternity index</string>
    <string name="dose_forms">Dose forms</string>
    <string name="similar_drugs">Similar drugs</string>
    <string name="drug_icon_description">Drug icon</string>
    <string name="search_a_drug">Search a drug…</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="aspirin_description">
        Aspirin (BAN, USAN), also known as acetylsalicylic acid (/əˌsiːtəlˌsælɨˈsɪlɨk/
        ə-see-təl-sal-i-sil-ik) [ASA], is a salicylate drug, often used as an analgesic to relieve
        minor aches and pains, as an antipyretic to reduce fever, and as an anti-inflammatory
        medication.[2] Aspirin also has an antiplatelet effect by inhibiting the production of
        thromboxane, which under normal circumstances binds platelet molecules together to create a
        patch over damaged walls of blood vessels. Because the platelet patch can become too large
        and also block blood flow, locally and downstream, aspirin is also used long-term, at low
        doses, to help prevent heart attacks, strokes, and blood clot formation in people at high
        risk of developing blood clots.[3] Also, low doses of aspirin may be given immediately after
        a heart attack to reduce the risk of another heart attack or of the death of cardiac tissue.
        [4][5] Aspirin may be effective at preventing certain types of cancer, particularly
        colorectal cancer.[6][7][8] The main side effects of aspirin are gastrointestinal ulcers,
        stomach bleeding, and ringing in the ears, especially with higher doses. In children and
        adolescents, aspirin is not recommended for flu-like symptoms or viral illnesses, because
        of the risk of Reye\'s syndrome.[9] Aspirin is part of a group of medications called
        nonsteroidal anti-inflammatory drugs (NSAIDs), but differs from most other NSAIDs in the
        mechanism of action. Though it and others with similar structure, called the salicylates,
        have similar effects (antipyretic, anti-inflammatory, analgesic) to the other NSAIDs and
        inhibit the same enzyme cyclooxygenase (COX), aspirin does so in an irreversible manner
        and, unlike others, affects more the COX-1 variant than the COX-2 variant of the enzyme.[10]
        The active ingredient of aspirin was first discovered from the bark of the willow tree in
        1763 by Edward Stone of Wadham College, University of Oxford. He had discovered salicylic
        acid, the active ingredient of aspirin.[11] Aspirin was first synthesized by Felix Hoffmann,
        a chemist with the German company Bayer in 1897.[12][13] Aspirin is one of the most widely
        used medications in the world, with an estimated 40,000 tonnes of it being consumed each
        year.[14] In countries where is a registered trademark owned by Bayer, the generic term is
        acetylsalicylic acid (ASA).[15] It is on the WHO Model List of Essential Medicines, the most
        important medications needed in a basic health system.[16]
    </string>
    <string name="aspirin_name">Salicylate</string>
    <string name="aspirin_generic_name">acetylsalicylic acid\n2-(acetoxy)benzoic acid\nalternate name 3</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="cart">Cart</string>
    <string name="rxnav_disclaimer">This product uses publicly available data from the U.S. National Library of Medicine (NLM), National Institutes of Health, Department of Health and Human Services; NLM is not responsible for the product and does not endorse or recommend this or any other product.</string>
    <string name="aspirin_categories">Salycilate</string>
    <string name="drug_prototype">Prototype de médicament</string>
    <string name="interactions">Interactions</string>
    <string name="description">Description</string>
    <string name="aspirin_drug_form">Tablet, Oral Pill, ...</string>
    <string name="brand_name">Brand name</string>
    <string name="precise_ingredient">Precise ingredient</string>
    <string name="ingredient">Drug</string>
</resources>
