<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    tools:context="ca.umontreal.iro.guidedesmedicaments.DrugFragment">

    <ImageView
        android:id="@+id/drug_icon"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:contentDescription="@string/drug_icon_description" />

    <TextView
        android:id="@+id/drug_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/drug_icon"
        android:layout_toRightOf="@id/drug_icon"
        android:text="@string/aspirin_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end" />

    <CheckBox
        android:id="@+id/bookmark"
        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.Star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_toLeftOf="@id/cart"
        android:layout_toStartOf="@id/cart" />

    <TextView
        android:id="@+id/drug_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookmark"
        android:layout_toEndOf="@id/drug_icon"
        android:layout_toRightOf="@id/drug_icon"
        android:maxLines="3"
        android:text="@string/aspirin_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>