<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.umontreal.iro.guidedesmedicaments.DrugFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/drug_icon"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:contentDescription="@string/drug_icon_description"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/drug_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/drug_icon"
            android:layout_toEndOf="@id/drug_icon"
            android:layout_toRightOf="@id/drug_icon"
            android:text="@string/aspirin_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/bookmark"
            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/drug_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/generic_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/drug_name"
            android:layout_alignStart="@id/drug_name"
            android:layout_below="@id/bookmark"
            android:text="@string/aspirin_generic_name" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/drug_icon"
            android:text="@string/aspirin_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/drug_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categories"
            android:orientation="vertical">

            <TextView
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center|bottom"
                android:background="@android:color/transparent" />
        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <TextView
            android:id="@+id/maternity_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drug_description"
            android:text="@string/maternity_index" />

        <TextView
            android:id="@+id/administration_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/maternity_index"
            android:text="@string/administration_method" />

        <TextView
            android:id="@+id/label_counter_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/administration_method"
            android:text="@string/counter_indication"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.linearlistview.LinearListView
            android:id="@+id/counter_indications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_counter_indicator"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/label_similar_drugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/counter_indications"
            android:text="@string/similar_drugs"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.linearlistview.LinearListView
            android:id="@+id/similar_drugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_similar_drugs"
            android:orientation="vertical" />

    </RelativeLayout>
</ScrollView>
